<resources>
    <string name="app_name">SwEng CTF</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_challenges">Challenges</string>
    <string name="menu_item_leaderboard">Leaderboard</string>
    <string name="home_welcome">Welcome</string>
    <string name="home_welcome_h2">To the SwEng Android security CTF!</string>
    <string name="home_welcome_text">This beginner-friendly CTF game was designed by the SwEng staff to teach you about common Android security vulnerabilities. In this exercise, you will hack this application itself through a series of challenges, each illustrating a realistic attack vector in mobile security.</string>
    <string name="ctf">CTF</string>
    <string name="home_what">What the flag is a CTF?</string>
    <string name="home_what_text">A CTF (or Capture The Flag) is an information security competitive game in which flags (generally string tokens) are hidden into computer systems. Players must steal these flags by solving a variety of challenges, ranging from computer science riddles to exploitation of vulnerable programs or systems in multiple domains (e.g. crypto, web, reverse engineering, hardware, …). This app is a jeopardy-style CTF, in which tasks have been designed in advance and which you will try to crack in order to submit your flags.</string>
    <string name="challenge_icon">Challenge icon</string>
    <string name="challenge_n_points">%d points</string>
    <string name="notif_title">SwEng CTF</string>
    <string name="notif_text">A wild notification appeared! That\'s it.</string>
    <string name="notif_channel_desc">Notifications from SwEng CTF app</string>
    <string name="settings">Settings</string>
    <string name="settings_app_name">Application name</string>
    <string name="settings_version">Build version</string>
    <string name="settings_notification">Notification</string>
    <string name="settings_notification_text">Pop a system notification</string>
    <string name="settings_night_mode">Night mode</string>
    <string name="settings_night_mode_text">Toggle between light / dark themes</string>
    <string name="settings_debug_mode">Debug mode</string>
    <string name="settings_debug_mode_text">Only for developers; surely no-one will ever use this</string>
    <string name="hint_title">Hint: %s</string>
    <string name="hint_expand">Expand hint</string>
    <string name="submit_your_flag">Submit your flag</string>
    <string name="flag_icon">Flag icon</string>
    <string name="success">Success</string>
    <string name="success_your_flag_is_correct">Success! Your flag is correct</string>
    <string name="flag_submission_hint">Write your flag here, format is flag{secret_flag_value}</string>
    <string name="submit_flag">Submit flag</string>
    <string name="flag_incorrect">Incorrect flag</string>
    <string name="settings_delete_data">Delete all app data</string>
    <string name="settings_delete_data_text">Permanently removes all app data persisted on device, including solved challenges and scores (there is no flag to be found by doing this).</string>
    <string name="settings_delete_data_alert">Do you really want to delete all stored cache and data from this app?\n\nThis action cannot be undone and IS NOT a necessary step towards finding any flag.</string>
    <string name="lock_icon">Lock icon</string>
    <string name="challenge_early_bird_lock">Time before lock opens:</string>
    <string name="challenge_fruity_injection_search_hint">Search a fruit…</string>
    <string name="challenge_javapp_hint">How are you today?</string>
    <string name="leaderboard_your_current_ranking">Your current ranking</string>
    <string name="change_username">Change username</string>
    <string name="leaderboard_refresh_ranking">Refresh ranking</string>
    <string name="score_points">%d points</string>
    <string name="new_username">New username...</string>
</resources>